// Vitest Snapshot v1

exports[`Pensjonsavtaler > Gitt at brukeren har samtykket > rendrer riktig med avtaler som bare har start dato 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item"
    data-testid="pensjonsavtaler"
  >
    <button
      aria-expanded="false"
      class="navds-accordion__header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-r6"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r6"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Pensjonsavtaler: 
        <span
          class="_details_c03039"
        >
          <svg
            aria-labelledby="loader-r7"
            class="navds-loader navds-loader--medium navds-loader--neutral"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 50 50"
          >
            <title
              id="loader-r7"
            >
              venter...
            </title>
            <circle
              class="navds-loader__background"
              cx="25"
              cy="25"
              fill="none"
              r="20"
              xmlns="http://www.w3.org/2000/svg"
            />
            <circle
              class="navds-loader__foreground"
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke-dasharray="50 155"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content navds-accordion__content--closed _content_e53ef6 navds-body-long navds-body-long--medium"
    />
  </div>
</DocumentFragment>
`;

exports[`Pensjonsavtaler > Gitt at brukeren har samtykket > rendrer riktig med avtaler som har både start- og sluttdato 1`] = `
<DocumentFragment>
  <div
    class="navds-accordion__item"
    data-testid="pensjonsavtaler"
  >
    <button
      aria-expanded="false"
      class="navds-accordion__header"
      type="button"
    >
      <div
        class="navds-accordion__icon-wrapper"
      >
        <svg
          aria-hidden="true"
          aria-labelledby="title-r8"
          class="navds-accordion__header-chevron"
          fill="none"
          focusable="false"
          height="1em"
          role="img"
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="title-r8"
          >
            Vis mer
          </title>
          <path
            clip-rule="evenodd"
            d="M5.97 9.47a.75.75 0 0 1 1.06 0L12 14.44l4.97-4.97a.75.75 0 1 1 1.06 1.06l-5.5 5.5a.75.75 0 0 1-1.06 0l-5.5-5.5a.75.75 0 0 1 0-1.06Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
      </div>
      <span
        class="navds-accordion__header-content navds-heading navds-heading--small"
      >
        Pensjonsavtaler: 
        <span
          class="_details_c03039"
        >
          <svg
            aria-labelledby="loader-r9"
            class="navds-loader navds-loader--medium navds-loader--neutral"
            focusable="false"
            preserveAspectRatio="xMidYMid"
            viewBox="0 0 50 50"
          >
            <title
              id="loader-r9"
            >
              venter...
            </title>
            <circle
              class="navds-loader__background"
              cx="25"
              cy="25"
              fill="none"
              r="20"
              xmlns="http://www.w3.org/2000/svg"
            />
            <circle
              class="navds-loader__foreground"
              cx="25"
              cy="25"
              fill="none"
              r="20"
              stroke-dasharray="50 155"
            />
          </svg>
        </span>
      </span>
    </button>
    <div
      class="navds-accordion__content navds-accordion__content--closed _content_e53ef6 navds-body-long navds-body-long--medium"
    />
  </div>
</DocumentFragment>
`;
